ultimando detalles en el fetch

--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
         </div>
     </div>
     
-    <footer class="footer container-fluid mt-5 border rounded-3">
-        <h4 class="text-center">Si tienes dudas puedes escribir un mail a cualquiera de nuestros colaboradores y te responderán a la brevedad</h4>
-        <div id="ulMails"></div>
+    <footer class="footer container-fluid bg-primary mt-5 border rounded-3">
+        <h5 class="text-center">Si tienes dudas puedes escribir un mail a cualquiera de nuestros colaboradores y te responderán a la brevedad</h5>
+        <ul id="ulMails"></ul>
     </footer>
 
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
